xyz_tech_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xyz-tech-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: xyz_deploy
  template:
    metadata:
      labels:
        app: xyz_deploy
    spec:
      containers:
      - name: xyz-app
        image: mujah92/xyz_tech:latest
        ports:
        - containerPort: 80
