xyz_tech_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xyz-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: xyz.local
      http:
        paths:
          - path: /xyz_tech(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: xyz-nodeport-svc
                port:
                  number: 80
